# moni

./: .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  README.md  utils.md
CMakeModules/: ConfigureCompilerClang.cmake  ConfigureCompilerGcc.cmake
data/: reads.fastq
include/common/: common.hpp  seqidx.hpp
include/extender/: extend_reads_dispatcher.hpp  extender_klib.hpp  extender_ksw2.hpp
include/ms/: ms_pointers.hpp  ms_rle_string.hpp  thresholds_ds.hpp
pipeline/: moni  moni.in
src/: CMakeLists.txt  build_seqidx.cpp  compress_dictionary.cpp  extend_klib.cpp  extend_ksw2.cpp  matching_statistics.cpp  mems.cpp  rlebwt_ms_build.cpp
